# rust-learn

./: .gitignore
collections/src/: main.rs
control-flow/src/: main.rs
define_modules/src/: main.rs
enums/src/: main.rs
error_handling/src/: main.rs
first-five-lessons-app/: Cargo.toml  config.toml
first-five-lessons-app/src/: get_data.rs  main.rs  structs.rs  utils.rs
functions/src/: main.rs
guessing_game/src/: main.rs
match-control-flow/src/: main.rs
method_syntax/src/: main.rs
ownership/src/: main.rs
rectangles/src/: main.rs
references_and_borrowing/src/: main.rs
restaurant/src/: front_of_house.rs  lib.rs
slice_types/src/: main.rs
structs/src/: main.rs
variables/src/: main.rs
